- Union of numerical semigroups is a numerical set
- Integer partitions associated to numerical sets and numerical semigroups
- Numerical sets associated to integer partitions
- Hook lenghts associated to integer partitions of numerical sets and semigroups
- Dual of a numerical set (and numerical semigroup)
- Bonded, cojoint and end to end sum of numerical sets
1.3.1 -> 1.4.0
- Added NumericalSemigroupsWithFrobeniusNumberPC
- Added NumericalSemigroupsWithGenusPC
- Added NumericalSemigroupsWithMaxPrimitivePC
- Added databases (semigroups with fixed Frobenius number (up to 32, 1.5MB); semigroups with fixed genus (up to 22, 1.9MB); semigroups with fixed maximum primitive (up to 32, 2.6 MB))
- Added NumericalSemigroupsWithMaxPrimitive
- Changes in DotSplash due to viz.js reallocation
- Added FiniteComplementIdealExtension
- Functions related to Ratlif-Rush closure corrected (intersecting with the semigroup was needed as reported by M. D'Anna and F. Strazzanti)
- Added sum of two numerical semigroups
- Bibliography update 
- Priority arguments added to membership methods for numerical semigroups

#======
1.3.0 -> 1.3.1
- LegendrianGenericNumericalSemigroup
- AperyList now works for an ideal, and computes the Apéry list wrt the multiplicity of its ambient numerical semigroup
- Added SpecialArfGaps, IsArfIrreducible, ArfOverSemigroups, DecomposeIntoArfIrreducibles 
- Added DenumerantIdeal
- Remove IsRectangularTable as filter 
- Added IsUniversallyFreeNumericalSemigroup
- BinomialIdealOfNumericalSemigroup

#======
1.2.2 -> 1.3.0
- Addeed NearlyGorensteinVectors
- Added CircuitsOfKernelCongruence, PrimitiveRelationsOfKernelCongruence, IsMinimalRelationOfNumericalSemigroup, AllMinimalRelationsOfNumericalSemigroup
- Added IsAlmostCanonicalIdeal, IsNearlyGorenstein, IsGeneralizedAlmostSymmetric, IsHomogeneousNumericalSemigroup, AsNumericalDuplication, DilatationOfNumericalSemigroup, RFMatrices (by Francesco Strazzanti)