@@ -34,6 +34,7 @@
 - Hook lenghts associated to integer partitions of numerical sets and semigroups
 - Dual of a numerical set (and numerical semigroup)
 - Bonded, cojoint and end to end sum of numerical sets
+- Ferrers diagram of (the integer partition associated to a) numerical set or semigroup
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
 - Added NumericalSemigroupsWithGenusPC
